overflow issues

--- a/vcard/static/css/style.css
+++ b/vcard/static/css/style.css
@@ -188,11 +188,12 @@ li, ul {
 
 #scrollbuttons {
     display: none;
-    position:absolute;
+    position:relative;
     z-index:1003;
     width: 100%;
     height:100%;
-    top:0%;
+    top:-100px;
+    overflow: hidden;
 }
 
 #close, #next, strong {
@@ -217,7 +218,7 @@ li, ul {
     float:right;
     display:inline-block;
     margin-right: -7% !important;
-    margin-top:1%;
+    margin-top:-1%;
 }
 
 em {
